# docs/swagger.json
@@ -28,7 +28,7 @@
                 }
             }
         },
-        "/data/article/{id}": {
+        "/content/article/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -56,7 +56,7 @@
                 }
             }
         },
-        "/data/category/{id}": {
+        "/content/category/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/data/tag/{id}": {
+        "/content/tag/{id}": {
             "get": {
                 "produces": [
                     "application/json"
